Various tweaks in preparation for Temporal.Instant https://bugs.webkit.org/show_bug.cgi?id=230331

Patch by Philip Chimento <pchimento@igalia.com> on 2021-09-23
Reviewed by Yusuke Suzuki.

* runtime/TemporalDuration.cpp:
(JSC::TemporalDuration::fromDurationLike): Use
  temporalUnitPropertyName().
(JSC::TemporalDuration::toISO8601Duration): Improve error message to
  include the invalid string.
(JSC::TemporalDuration::with const): Use temporalUnitPropertyName().
(JSC::TemporalDuration::toString): Use formatSecondsStringFraction().
* runtime/TemporalObject.cpp:
(JSC::ellipsizeAt): Add helper to ellipsize string at certain length.
(JSC::temporalUnitPropertyName): Move code from TemporalDuration into
  a function which will be reused in other Temporal types.
(JSC::temporalFractionalSecondDigits): Handle NaN as per
  specification, and improve error message to include the invalid
  value.
(JSC::formatSecondsStringFraction): Move code from TemporalDuration
  into a function which will be reused in other Temporal types.
* runtime/TemporalObject.h:

Canonical link: https://commits.webkit.org/242074@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283009 268f45cc-cd09-0410-ab3c-d52691b4dbfc